sylysed active link in menu

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 - name: THE SHOW
-  link: /the-show.html
+  link: /the-show
 - name: FACTS
-  link: /facts.html
+  link: /facts
 - name: TEAM
   link: /team
 - name: FRIENDS
