--- a/.forestry/front_matter/templates/the-show.yml
+++ b/.forestry/front_matter/templates/the-show.yml
@@ -26,6 +26,13 @@ fields:
     schema:
       format: markdown
 - type: textarea
+  name: expectation_1_de
+  label: expectation 1 de
+  config:
+    wysiwyg: true
+    schema:
+      format: markdown
+- type: textarea
   name: expectation_2_en
   label: Expectation 2 en
   config:
@@ -33,8 +40,22 @@ fields:
     schema:
       format: markdown
 - type: textarea
+  name: expectation_2_de
+  label: Expectation 2 de
+  config:
+    wysiwyg: true
+    schema:
+      format: markdown
+- type: textarea
   name: expectation_3_en
   label: expectation 3 en
+  config:
+    wysiwyg: true
+    schema:
+      format: markdown
+- type: textarea
+  name: expectation_3_de
+  label: expectation 3 de
   config:
     wysiwyg: true
     schema:
@@ -48,8 +69,23 @@ fields:
     schema:
       format: markdown
 - type: textarea
+  name: offer_1_de
+  label: offer 1 de
+  default: ''
+  config:
+    wysiwyg: true
+    schema:
+      format: markdown
+- type: textarea
   name: offer_2_en
   label: offer 2 en
+  config:
+    wysiwyg: true
+    schema:
+      format: markdown
+- type: textarea
+  name: offer_2_de
+  label: offer 2 de
   config:
     wysiwyg: true
     schema:
@@ -62,3 +98,9 @@ fields:
     schema:
       format: markdown
 - type: textarea
+  name: offer_3_en
+  label: offer 3 en
+  config:
+    wysiwyg: true
+    schema:
+      format: markdown
