CORRECTED STORY IN YAML NAVIGATION SHOW

--- a/_data/navigation-show.yml
+++ b/_data/navigation-show.yml
@@ -2,7 +2,7 @@
   link: /the-show/gallery
 - name: VIDEO
   link: /the-show/video
-- name: TEAM
+- name: STORY
   link: /the-show/story
 - name: OFFER
   link: /the-show
