--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/crdc" # the subpath of your site, e.g. /blog
 url: "https://matteocarpi.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  matteocarpi
 
 # Build settings
 markdown: kramdown
