--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -2,13 +2,13 @@
 new_page_extension: md
 auto_deploy: true
 admin_path: ''
-webhook_url: 
+webhook_url:
 sections:
 - type: jekyll-pages
   label: Pages
   create: all
 upload_dir: uploads
-public_path: "/uploads"
+public_path: {{ "/uploads" | relative_url }}
 front_matter_path: ''
 use_front_matter_path: false
 file_template: ":filename:"
