--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -8,7 +8,7 @@ sections:
   label: Pages
   create: all
 upload_dir: uploads
-public_path: {{ "/uploads" | relative_url }}
+public_path: "/crdc/uploads"
 front_matter_path: ''
 use_front_matter_path: false
 file_template: ":filename:"
