--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -2,11 +2,11 @@
 new_page_extension: md
 auto_deploy: true
 admin_path: ''
-webhook_url: 
+webhook_url:
 sections:
 - type: jekyll-pages
   label: Pages
-  create: all
+  create: none
 upload_dir: uploads
 public_path: "/crdc/uploads"
 front_matter_path: ''
