--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -12,4 +12,4 @@ public_path: "/crdc/uploads"
 front_matter_path: ''
 use_front_matter_path: false
 file_template: ":filename:"
-exclude: "/404"
+exclude: "/crdc/404"
