--- a/_data/navigation-show.yml
+++ b/_data/navigation-show.yml
@@ -1,8 +1,8 @@
 - name: GALLERY
-  link: /the-show/gallery
+  link: /en/the-show/gallery
 - name: VIDEO
-  link: /the-show/video
+  link: /en/the-show/video
 - name: STORY
-  link: /the-show/story
+  link: /en/the-show/story
 - name: OFFER
-  link: /the-show
+  link: /en/the-show
