--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 - name: THE SHOW
-  link: /the-show
+  link: /en/the-show
 - name: FACTS
-  link: /facts
+  link: /en/facts
 - name: TEAM
-  link: /team
+  link: /en/team
 - name: FRIENDS
-  link: /friends
+  link: /en/friends
