fixed action figures in Team

--- a/_data/navigation-de.yml
+++ b/_data/navigation-de.yml
@@ -1,8 +1,8 @@
 - name: THE SHOW
-  link: /en/the-show
+  link: /de/the-show
 - name: FACTS
-  link: /en/facts
+  link: /de/facts
 - name: TEAM
-  link: /en/team
+  link: /de/team
 - name: FRIENDS
-  link: /en/friends
+  link: /de/friends
