translated roots for DE

--- a/_data/navigation-de.yml
+++ b/_data/navigation-de.yml
@@ -1,8 +1,8 @@
 - name: THE SHOW
   link: /de/the-show
-- name: FACTS
+- name: FAKTEN
   link: /de/facts
 - name: TEAM
   link: /de/team
-- name: FRIENDS
+- name: FREUNDE
   link: /de/friends
