--- a/_data/navigation-show.yml
+++ b/_data/navigation-show.yml
@@ -1,7 +1,7 @@
 - name: GALLERY
   link: /en/the-show/gallery
-- name: VIDEO
-  link: /en/the-show/video
+# - name: VIDEO
+#   link: /en/the-show/video
 - name: STORY
   link: /en/the-show/story
 - name: OFFER
